pet filter created and fixed creationg of pet
