# docs/swagger.json
@@ -251,11 +251,43 @@
                     "pets"
                 ],
                 "summary": "Get all pets",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Pet ID",
+                        "name": "pet_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Veterinarian ID",
+                        "name": "vet_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Owner ID",
+                        "name": "owner_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successfully retrieved pets",
                         "schema": {
-                            "$ref": "#/definitions/models.Pet"
+                            "$ref": "#/definitions/models.OutputPetDTO"
                         }
                     },
                     "500": {
@@ -285,7 +317,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Pet"
+                            "$ref": "#/definitions/handlers.createPetDTO"
                         }
                     }
                 ],
@@ -293,7 +325,7 @@
                     "201": {
                         "description": "Successfully created pet",
                         "schema": {
-                            "$ref": "#/definitions/models.Pet"
+                            "type": "number"
                         }
                     },
                     "400": {
@@ -462,11 +494,63 @@
         }
     },
     "definitions": {
+        "handlers.createPetDTO": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "animal_type": {
+                    "type": "string"
+                },
+                "behavior": {
+                    "type": "string"
+                },
+                "condition": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "owner_id": {
+                    "type": "integer"
+                },
+                "research_status": {
+                    "type": "string"
+                },
+                "vet_id": {
+                    "type": "integer"
+                },
+                "weight": {
+                    "type": "number"
+                }
+            }
+        },
         "models.ErrorDTO": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "models.OutputPetDTO": {
+            "type": "object",
+            "properties": {
+                "owner_id": {
+                    "type": "integer"
+                },
+                "pet_info": {
+                    "$ref": "#/definitions/models.Pet"
+                },
+                "vet_id": {
+                    "type": "integer"
                 }
             }
         },
